feat: add login and token

--- a/src/CashFlow.Api/appsettings.Development.json
+++ b/src/CashFlow.Api/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "Connection": "Server=localhost;Database=cashflowdb;Uid=root;Pwd=test;"
+  },
+  "Settings": {
+    "Jwt": {
+      "SigninKey": "5N^SZwj7A2@Jv3Hg9vx^e$QVmhYkKQg9",
+      "ExpiresSeconds": 3600
+    }
   }
 }
