--- a/src/CashFlow.Application/CashFlow.Application.csproj
+++ b/src/CashFlow.Application/CashFlow.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="ClosedXML" Version="0.104.1" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
   </ItemGroup>
 
